fix some api function
change name of anime serie server to anime episode server
